# HTE_CompanionHK

./: .env.example  .gitignore  AGENTS.md  README.md  manual_e2e.md
backend/: Makefile  README.md  environment.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 8f327fc4442f_create_initial_schema.py
backend/app/: main.py
backend/app/api/routes/: recommendations.py  voice.py  weather.py
backend/app/core/: database.py  redis_client.py  settings.py
backend/app/memory/: context_builder.py  embeddings.py
backend/app/models/: __init__.py  audit.py  base.py  chat.py  enums.py  family_mode.py  memory.py  recommendation.py  user.py  voice.py
backend/app/prompts/: role_prompts.py
backend/app/providers/: __init__.py  base.py  cantoneseai.py  elevenlabs.py  exa.py  google_maps.py  minimax.py  open_meteo.py  router.py
backend/app/repositories/: __init__.py  audit_repository.py  chat_repository.py  memory_repository.py  recommendation_repository.py  user_repository.py
backend/app/runtime/: langgraph_runtime.py
backend/app/schemas/: recommendations.py  voice.py  weather.py
backend/app/services/: chat_orchestrator.py  recommendation_service.py  safety_service.py  weather_service.py
backend/tests/: test_database_schema.py  test_elevenlabs_provider.py  test_persistence_hooks.py  test_provider_router.py  test_recommendations.py  test_runtime_factory.py  test_weather.py
docs/: ROADMAP-24H.md  TECHSTACK.md
docs/architecture/: database-schema.md  recommendation-contract.md
frontend/: components.json  package-lock.json  package.json
(+21 files in other folders)
